--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "c:\\Users\\한건희\\Desktop\\pythonworkspace\\face_recognition\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\한건희\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
